# generic-neuromotor-interface

./: pyproject.toml  seeds.sh
config/: discrete_gestures.yaml  handwriting.yaml
config/data_module/: discrete_gestures_data_module.yaml  handwriting_data_module.yaml
config/lightning_module/: discrete_gestures_module.yaml
generic_neuromotor_interface/: networks.py  train.py
notebooks/: README.md  eval_discrete_gestures.py
notebooks/pretrained/: config.yaml
notebooks/supervised/: config.yaml
