[project]
name = "generic-neuromotor-interface"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black==24.4.2",
    "click==8.1.8",
    "flake8==7.0.0",
    "h5py==3.12.1",
    "hydra-core==1.3.2",
    "hypothesis==6.124.7",
    "levenshtein==0.26.1",
    "mypy==1.10.0",
    "numba==0.60.0",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "pre-commit==3.7.1",
    "pytest==8.3.3",
    "python-levenshtein==0.26.1",
    "pyyaml==6.0.2",
    "scipy==1.14.1",
    "seaborn==0.13.2",
    "trio==0.28.0",
    "unidecode==1.3.8",
    "matplotlib==3.9.2",
    "pytorch-lightning==1.8.6",
    "torch==2.4.1",
    "torchvision==0.19.1",
    "torchaudio==2.4.1",
    "requests",
    "timm",
    "tables",
]

[tool.pip]
extra-index-url = ["https://download.pytorch.org/whl/cu126"]